--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ html {
 
   position: absolute;
 
-  background: url(../bg1.jpg) no-repeat center center/cover;
+  background: url(bg1.jpg) no-repeat center center/cover;
 
   height: 643px;
 
