--- a/style.css
+++ b/style.css
@@ -202,7 +202,7 @@ border: 2px solid black;
 
   margin-top: 32px;
 
-  background: url(../sbg.jpg);
+  background: url(sbg.jpg);
 
   height: 600px;
 
