--- a/style.css
+++ b/style.css
@@ -204,7 +204,7 @@ border: 2px solid black;
 
   background: url(sbg.jpg);
 
-  height: 900px;
+  height: 600px;
 
 }
 
@@ -232,7 +232,7 @@ border: 2px solid black;
 
   border-radius: 0px;
 
-  /*justify-content: space-between;*/
+justify-content: space-between;
 
   /*background:#3F3F3F;*/
 
