--- a/style.css
+++ b/style.css
@@ -200,7 +200,7 @@ border: 2px solid black;
 
   /*border: 2px solid black;*/
 
-  margin-top: 39px;
+  margin-top: 32px;
 
   background: url(sbg.jpg);
 
@@ -246,13 +246,13 @@ justify-content: space-between;
 
   /*border: 2px solid red;*/
 
-  height: 55px;
+  /*height: 55px;
 
-  border-width: 100%;
+  border-width: 100%;*/
 
   margin: auto;
 
-  height: 58px;
+  height: 55px;
 
 }
 
