--- a/style.css
+++ b/style.css
@@ -232,7 +232,7 @@ border: 2px solid black;
 
   border-radius: 0px;
 
-justify-content: space-between;
+/*justify-content: space-between;*/
 
   /*background:#3F3F3F;*/
 
@@ -245,10 +245,8 @@ justify-content: space-between;
   display: block;
 
   /*border: 2px solid red;*/
-
-  /*height: 55px;
-
-  border-width: 100%;*/
+  height: 55px;
+  border-width: 100%;
 
   margin: auto;
 
